--- a/templates/home.html
+++ b/templates/home.html
@@ -2,63 +2,47 @@
 <html>
   <head>
     <title>The Security issues of smart homes technology</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
     <style>
-      h1 {
-        font-size: 40px;
-        font-family: Roboto;
-        font-weight: normal;
-        color: rgb(50, 50, 50);
-        text-aligncenter;
-      }
-      
       #banner {
-        width: 100%;
         height: 360px;
-        object-fit: cover;
+        width: 100%;
       }
-
-      h2 {
-        font-family: Roboto;
-        font: size; 32px;
-        color: rgb(100, 100, 100);
-        text-align:center;
-        font-weight: normal;
-      }
-
-      p{
-        font-family: Roboto;
-        color: rgb(80)80, 80);
-      }
-
-      #container{
-        max-width: 720px;
-        margin: 0 auto;
-        
-        
-        
-      }
-      
     </style>
-
   </head>
   
   <body>
-    <div id="container">
+    <div class="container">
       
-    <h1>Smart Homes Technology</h1>
-    <img id="banner" src="https://smart-homes-website.22developer.repl.co/static/smart.jpg" height="320" >
-    <h2>About The webpage</h2>
+    <h1 class="text-center mt-2 mb-4">Smart Homes Technology</h1>
+    <img class="img-fluid" id="banner" src="https://smart-homes-website.22developer.repl.co/static/smart.jpg" height="320" >
+    <h2 class="text-center mt-2 mb-4">About The webpage</h2>
       
-    <p>
+    <p class="lead">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse velit eros, venenatis vel aliquam sed, finibus id ipsum. Vivamus sit amet massa pretium, vehicula leo vitae, aliquet diam. Nam tincidunt ornare posuere. Praesent mollis aliquam risus sed molestie. Aenean ac lacus eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed dictum ut quam sit amet molestie. Nulla at mauris pretium, pharetra turpis eu, consectetur mauris. Nulla vel tincidunt ligula. Donec fringilla fringilla mi, vitae tristique urna tristique a. Maecenas convallis dictum purus sit amet tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Praesent bibendum ligula diam, sit amet lobortis metus laoreet quis. Sed mauris urna, bibendum id tempor nec, porta a elit. Suspendisse ultrices diam nec aliquet posuere.
     </p>
       
-    <h2>Smart homes technology</h2>
-    <p>TODO-Writ the devices</p>
-
-      <div style="text-align:center;">
-    <button>Issues</button>
-        </div>
+    <h2 class= "text-center mt-2 mb-4">Smart homes technology</h2>
+      
+      <div>
+        {% for devices in Devices %}
+        <div style="margin-bottom:16px;">
+          <h4 
+            style="color:rgb(120,120,120); margin-bottom:4px;"> 
+            {{devices['name']}}</h4>
+          <div><b>Risk:</b> {{devices['risk']}}</div>
+        </div> 
+        {% endfor %}
+      </div>
+    
+    <div class="text-center">
+    <button class="btn btn-primary btn-lg">Issues
+    </button>
+      <p class="mt-4">Copyright 2022</p>
+    </div>
       
     </div>
   </body>
