--- a/templates/home.html
+++ b/templates/home.html
@@ -1,50 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>The Security issues of smart homes technology</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
-    <style>
-      #banner {
-        height: 360px;
-        width: 100%;
-      }
-    </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+    <title>Smart home technology</title>
   </head>
-  
   <body>
-    <div class="container">
-      
-    <h1 class="text-center mt-2 mb-4">Smart Homes Technology</h1>
-    <img class="img-fluid" id="banner" src="https://smart-homes-website.22developer.repl.co/static/smart.jpg" height="320" >
-    <h2 class="text-center mt-2 mb-4">About The webpage</h2>
-      
-    <p class="lead">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse velit eros, venenatis vel aliquam sed, finibus id ipsum. Vivamus sit amet massa pretium, vehicula leo vitae, aliquet diam. Nam tincidunt ornare posuere. Praesent mollis aliquam risus sed molestie. Aenean ac lacus eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed dictum ut quam sit amet molestie. Nulla at mauris pretium, pharetra turpis eu, consectetur mauris. Nulla vel tincidunt ligula. Donec fringilla fringilla mi, vitae tristique urna tristique a. Maecenas convallis dictum purus sit amet tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Praesent bibendum ligula diam, sit amet lobortis metus laoreet quis. Sed mauris urna, bibendum id tempor nec, porta a elit. Suspendisse ultrices diam nec aliquet posuere.
-    </p>
-      
-    <h2 class= "text-center mt-2 mb-4">Smart homes technology</h2>
-      
-      <div>
-        {% for devices in Devices %}
-        <div style="margin-bottom:16px;">
-          <h4 
-            style="color:rgb(120,120,120); margin-bottom:4px;"> 
-            {{devices['name']}}</h4>
-          <div><b>Risk:</b> {{devices['risk']}}</div>
-        </div> 
-        {% endfor %}
-      </div>
-    
-    <div class="text-center">
-    <button class="btn btn-primary btn-lg">Issues
-    </button>
-      <p class="mt-4">Copyright 2022</p>
-    </div>
-      
-    </div>
+
+    <header>
+      <a href="#" class="title">Smart Home Technology</a>
+      <nav class="navigation">
+        <a href="#page1">Page1</a>
+        <a href="#page2">Page2</a>
+        <a href="#page3">Page3</a>
+        <a href="#page4">Page4</a>
+        <a href="#page5">Page5</a>
+      </nav>
+    </header>
   </body>
-  
 </html>
+  
